Archive2/3c/e63ae0aa63bfbc/output
main.cpp:11:21: warning: expression with side effects has no effect in an unevaluated context [-Wunevaluated-expression]
        PrintType<decltype(throw "error")> a; 
                           ^
main.cpp:11:37: error: implicit instantiation of undefined template 'PrintType<void>'
        PrintType<decltype(throw "error")> a; 
                                           ^
main.cpp:7:8: note: template is declared here
struct PrintType;
       ^
1 warning and 1 error generated.
